# langgraph-reflection-agent

./: .gitignore  CLAUDE.md  Justfile  README.md  docker-compose.yml
apps/backend/: .env.template  pyproject.toml
apps/backend/src/ai_agents/: base_agent.py
apps/backend/src/ai_agents/langgraph/: flow.py
apps/backend/src/ai_agents/langgraph/enums/: flow_state.py
apps/backend/src/ai_agents/langgraph/nodes/: base_node.py  finalize_node.py  generation.py  reflection.py
apps/backend/src/ai_agents/langgraph/states/: message_graph.py
apps/backend/src/ai_agents/langgraph_reflexion_agent/: flow.py
apps/backend/src/ai_agents/langgraph_reflexion_agent/enums/: flow_state.py
apps/backend/src/ai_agents/langgraph_reflexion_agent/nodes/: draft_actor.py  reflexion_actor.py  revise_actor.py  tool_executor.py
apps/backend/src/ai_agents/langgraph_reflexion_agent/nodes/prompts/: reflexion_prompt.py
apps/backend/src/ai_agents/langgraph_reflexion_agent/schemas/: answer_question.py  reflection_response.py  revise_answer_question.py
apps/backend/src/ai_agents/langgraph_reflexion_agent/states/: reflexion_agent_state.py
apps/backend/src/ai_agents/tavily/: tavily_client.py  tavily_crawl.py
apps/backend/src/modules/chat/: chat_controller.py  chat_service.py
apps/backend/src/modules/chat/dto/: chat_dto.py
apps/backend/src/modules/graph/: graph_controller.py  graph_service.py
apps/backend/src/modules/graph/dto/: generate_graph_dto.py
apps/backend/src/server_config/: logger.py  server.py  server_test.py  tracer.py  tracer_test.py
docker/: Dockerfile.backend  (+1 more)
(+2 files in other folders)
