[project]
name = "reflection-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "arize-phoenix-otel>=0.16.1",
    "fastapi>=0.136.1",
    "langchain>=1.2.18",
    "langchain-anthropic>=1.4.3",
    "langchain-ollama>=1.1.0",
    "langchain-postgres>=0.0.17",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.1.10",
    "openinference-instrumentation-langchain>=0.1.64",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.12",
    "uvicorn>=0.46.0",
]
